# pm_notes

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  GEMINI.md  README.md  서비스_개선요청_리스트.xlsx
.claude/: settings.local.json
.gemini/: settings.json
Codes/python/opensearch_handler/: README.md  __init__.py  client.py  config.py  connection_settings.py  document.py  example.py  index.py  lifecycle.py  pyproject.toml  pytest.ini  requirements.txt  search.py
Codes/python/opensearch_handler/example/: README.md  __init__.py  _path_setup.py  topic_01_connection.py  topic_02_index_management.py  topic_03_document_crud.py  topic_04_search_text_and_agg.py  topic_05_vector_and_hybrid.py  topic_06_template_alias_lifecycle.py  topic_06_template_alias_rollover.py  topic_07_search_raw.py
Codes/python/opensearch_handler/opensearch_handler/: __init__.py  client.py  connection_settings.py  document.py  index.py  lifecycle.py  search.py
Codes/python/opensearch_handler/tests/: README.md  conftest.py  test_client.py  test_config.py  test_document.py  test_index.py  test_integration_live.py  test_lifecycle.py  test_opensearch_handler_home.py  test_search.py
ai-dt/: CLAUDE.md  README.md
ai-dt/ai-coding-dictionary/: 01-the-model.md  02-sessions-context-windows-turns.md  03-tools-environment.md  04-failure-modes.md  (+4 more)
dev-environment/: README.md
llm-wiki/: PROMPTS.md  README.md  USAGE.md  WIKI_SCHEMA.md  obsidian-local-llm-integration.md  team-wiki-structure.md  wiki-schema-template.md
my-task/: 2026_1st_lookback.md  2026_2nd_plan.md  2026_상반기_리뷰_및_하반기_계획.md  AGENTS.md  CLAUDE.md
(+456 files in other folders)
